reorganizing, adding new NLR atoms and paper

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 <title>About</title>
-<link href='primary.css' rel='stylesheet' type='text/css' />
+<link href='css/primary.css' rel='stylesheet' type='text/css' />
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
