--- a/code.html
+++ b/code.html
@@ -1,6 +1,6 @@
 <html>
 <title>Coding</title>
-<link href='primary.css' rel='stylesheet' type='text/css' />
+<link href='css/primary.css' rel='stylesheet' type='text/css' />
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <link rel="icon" type="image/x-icon" href="favicon.ico" />
 <body>
@@ -35,6 +35,21 @@
 </a>
 
 <ul>
+
+<li>
+<table>
+<tr>
+<td class=mainentrytitle><a href="https://github.com/lowagner/NLRatoms" target="NLRatoms">NLRatoms</a></td>
+<td class=mainentrydate>2014</td>
+</tr>
+</table>
+<p>
+Mathematica code to do atomic calculations with the nonlocal Wigner-Seitz radius,
+not optimized but hopefully readable.
+It's on <a href="https://github.com/lowagner/NLRatoms" target="NLRatoms">Github</a>.
+</p>
+</li>
+
 
 <li>
 <table>
@@ -74,7 +89,7 @@ on it.
 Pynances is a python-based utility for keeping track of your finances.
 Originally designed to work with multiple currencies,
 since my family is being paid in two!  Download (or check out) from the
-<a href="https://github.com/lowagner/pynances" target="pynances">github</a>
+<a href="https://github.com/lowagner/pynances" target="pynances">Github</a>
 page.
 </p>
 </li>
@@ -100,7 +115,7 @@ page.
 Walker is a game where you must find safe passageway through a dungeon.
 Mostly coded around December 2009.
 It has spectacular graphics for the terminal. Download from the 
-<a href="https://github.com/lowagner/walker" target="walker">github</a>
+<a href="https://github.com/lowagner/walker" target="walker">Github</a>
 page.
 </p>
 </li>
