Code webpage runs with javascript, have added sparrow-bullets to project list

--- a/pub.html
+++ b/pub.html
@@ -1,9 +1,22 @@
 <html>
+<title>Publications</title>
+<link href='css/primary.css' rel='stylesheet' type='text/css' />
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<link rel="icon" type="image/x-icon" href="favicon.ico" />
+<body>
+<a id="top"> </a>
+<div id=container>
+
+<div class=header>
+  <h2> lucas o. wagner + publications </h2>
+</div>
+
+<!-- Main stuff to read and what not. -->
 
 <head>
 <script src="js/taffy-min.js"></script> 
 <script src="js/urlparams.js"></script> 
-<script src="js/managepubs.js"></script> 
+<script src="js/pub.js"></script> 
 
 <script>
 var publications = TAFFY([
@@ -174,19 +187,6 @@ var publications = TAFFY([
 </head>
 
 
-<title>Publications</title>
-<link href='css/primary.css' rel='stylesheet' type='text/css' />
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
-<body>
-<a id="top"> </a>
-<div id=container>
-
-<div class=header>
-  <h2> lucas o. wagner + publications </h2>
-</div>
-
-<!-- Main stuff to read and what not. -->
 
 <div class=main>
 <div id=biglinks>
