--- a/code.html
+++ b/code.html
@@ -11,123 +11,207 @@
 <h2> lucas o. wagner | code </h2>
 </div>
 
-<!-- Main stuff to read and what not. -->
-<div class=main>
-<div id=taglinks>
-<ul>
-<li>
-<a href="#current">Current</a>
-</li>
 
-<li>
-<a href="#useful">Useful</a>
-</li>
-<li>
-<a href="#games">Games</a>
-</li>
-</ul>
+<head>
+<script src="js/taffy-min.js"></script> 
+<script src="js/urlparams.js"></script> 
+<script src="js/code.js"></script> 
+
+<script>
+var projects = TAFFY([
+    {
+        title:"Sparrow-bullets",
+        url:"https://github.com/lowagner/sparrow-bullets",
+        yearstart:2014,
+        yearend:2014,
+        description:"Combining Sparrow3D (render/game engine) with Bullet physics (physics engine). "+
+            "Currently this \"game\" has you pushing blocks off the platform.  Eventually I hope to "+
+            "get it running on various open-source handhelds, like the OpenPandora or the GCW-Zero. "+
+            "Check it out on <a href='https://github.com/lowagner/sparrow-bullets' target='Sparrow-bullets'>Github</a>, "+
+            "or take a look at a <a href='https://www.youtube.com/watch?v=K-ouuWwczM4' target='sparrow-youtube'>video</a> on it.",
+        tags:"game, physics, c++"
+    },
+    {
+        title:"NLRatoms",
+        url:"https://github.com/lowagner/NLRatoms",
+        yearstart:2014,
+        yearend:2014,
+        description:"Mathematica code to do atomic calculations with the nonlocal Wigner-Seitz radius, "+
+            "not optimized but hopefully readable. "+
+            "It's on <a href='https://github.com/lowagner/NLRatoms' target='NLRatoms'>Github</a>.",
+        tags:"physics, research, chemistry, mathematica"
+    },
+    {
+        title:"PyanoH3ro",
+        yearstart:2013,
+        yearend:2014,
+        description:"PyanoH3ro will be a ripoff of some very similar sounding rhythm and band games. "+
+            "Heavily inspired by DDR, which is good for exercise, and a desire to make "+
+            "these sorts of games helpful for actually learning music.</p><p>"+
+            "I have high hopes that this will also be a very fun music composition tool. "+
+            "It is nearly complete (??), but until release check out my "+
+            "<a href='https://www.youtube.com/user/ilictis' target='youtubes'>Youtube videos</a> on it. "+
+            "(<a href='https://www.youtube.com/watch?v=1l3dUywve7Q' target='pyano-youtube'>Here</a> is latest video.)",
+        tags:"game, music, python"
+    },
+    {
+        title:"Pynances",
+        url:"https://github.com/lowagner/pynances",
+        yearstart:2013,
+        yearend:2014,
+        description:"Pynances is a python-based utility for keeping track of your finances. "+
+            "Originally designed to work with multiple currencies, " +
+            "since my family is being paid in two!  Download (or check out) from the "+
+            "<a href='https://github.com/lowagner/pynances' target='Pynances'>Github</a> page.",
+        tags:"money, utility, python"
+    },
+    {
+        title:"Walker",
+        url:"https://github.com/lowagner/walker",
+        yearstart:2009,
+        yearstart:2009,
+        description:"Walker is a game where you must find safe passageway through a dungeon. "+
+            "Mostly coded around Christmas 2009. "+
+            "It has spectacular graphics for the terminal. Download from the "+
+            "<a href='https://github.com/lowagner/walker' target='Walker'>Github</a> page.",
+        tags:"game, bash"
+    }
+    ]);
+</script>
+
+</head>
+
+
+<!-- Main stuff to read and what not. -->
+
+<div class=main>
+<div id=biglinks>
+    <ul>
+    <li><a href="code.html?s=all">all</a></li>
+    <li><a href="code.html?ys=2009">2009</a></li>
+    <li><a href="code.html?ys=2013">2013</a></li>
+    <li><a href="code.html?ys=2014">2014</a></li>
+    </ul> 
 </div>
 
 
-
-<a id="current">
-<h3>Current projects</h3>
-</a>
-
-<ul>
-
-<li>
-<table>
-<tr>
-<td class=mainentrytitle><a href="https://github.com/lowagner/NLRatoms" target="NLRatoms">NLRatoms</a></td>
-<td class=mainentrydate>2014</td>
-</tr>
-</table>
-<p>
-Mathematica code to do atomic calculations with the nonlocal Wigner-Seitz radius,
-not optimized but hopefully readable.
-It's on <a href="https://github.com/lowagner/NLRatoms" target="NLRatoms">Github</a>.
-</p>
-</li>
-
-
-<li>
-<table>
-<tr>
-<td class=mainentrytitle>PyanoH3ro <span style="font-weight:normal">(unreleased)</span></td>
-<td class=mainentrydate>2013-2014</td>
-</tr>
-</table>
-<p>
-PyanoH3ro will be a ripoff of some very similar sounding rhythm and band games.
-Heavily inspired by DDR, which is good for exercise, and a desire to make 
-these sorts of games helpful for actually learning music.
-</p>
-<p>
-I have high hopes that this will also be a very fun music composition tool.
-It is nearly complete (??), but until release check out my 
-<a href="https://www.youtube.com/user/ilictis" target="youtubes">Youtube videos</a>
-on it.
-</p>
-</li>
-
-</ul>
-
-<a id="useful">
-<h3>Useful</h3>
-</a>
-
-<ul>
-<li>
-<table>
-<tr>
-<td class=mainentrytitle><a href="https://github.com/lowagner/pynances" target="pynances">Pynances</a></td>
-<td class=mainentrydate>2013-2014</td>
-</tr>
-</table>
-<p>
-Pynances is a python-based utility for keeping track of your finances.
-Originally designed to work with multiple currencies,
-since my family is being paid in two!  Download (or check out) from the
-<a href="https://github.com/lowagner/pynances" target="pynances">Github</a>
-page.
-</p>
-</li>
-
-
-
-</ul>
-
-<a id="games">
-<h3>Games</h3>
-</a>
+    <div id=taglinks>
+    <ul>
+    <li><a href="code.html?g=physics">physics</a></li>
+    <li><a href="code.html?g=research">research</a></li>
+    <li><a href="code.html?g=game">game</a></li>
+    <li><a href="code.html?g=music">music</a></li>
+    <li><a href="code.html?g=utility">utility</a></li>
+    <li><a href="code.html?g=money">money</a></li>
+    <li><a href="code.html?g=chemistry">chemistry</a></li>
+    <li><a href="code.html?g=mathematica">mathematica</a></li>
+    <li><a href="code.html?g=python">python</a></li>
+    <li><a href="code.html?g=c++">c++</a></li>
+    <li><a href="code.html?g=bash">bash</a></li>
+    </ul> 
+    </div>
 
 <ul>
 
-<li>
-<table>
-<tr>
-<td class=mainentrytitle><a href="https://github.com/lowagner/walker" target="walker">Walker</a></td>
-<td class=mainentrydate>2009+</td>
-</tr>
-</table>
-<p>
-Walker is a game where you must find safe passageway through a dungeon.
-Mostly coded around December 2009.
-It has spectacular graphics for the terminal. Download from the 
-<a href="https://github.com/lowagner/walker" target="walker">Github</a>
-page.
-</p>
-</li>
 
-<center>
-<a href="#top">Back to top</a>
-</center>
+<script>
 
+var s = 0;
+if ('s' in QueryString)
+{
+    if ( QueryString['s'] == "all" )
+    {
+        s = "all";
+    }
+    else
+    {
+        s = parseInt( QueryString['s'] );
+    }
+}
+//document.write("<p> everything but s = " + everythingButS  + "</p>");
+
+function writebyfilter( func ) {
+    // no special URL parameters.
+    if ( s == "all" )
+    {   
+        projects( func ).each( writecode );
+        document.write("<li><table class=navigation><tr>");
+        document.write("<td width=\"100px\"></td>"); 
+        document.write("<td width=\"200px\" align=\"center\"><a href=\"#top\">Back to top</a></td>");
+        document.write("<td width=\"100px\"></td>"); 
+        document.write("</tr></table></li>");
+    }
+    else
+    {
+        codesMIN = s*codesMAXpp;
+        codesMAX = (s+1)*codesMAXpp-1; 
+        projects( func ).each( writeornotcode );
+
+        if ( codesDISPLAYED >= codesSHOWbackTOtopAFTER )
+        {
+            document.write("<li><table class=navigation><tr>");
+            if (codesBEFORE)
+                document.write("<td width=\"100px\"><a href=\"code.html"+everythingButS+"s="+(s-1)+"\">Previous</a></td>");
+            else
+                document.write("<td width=\"100px\"></td>"); 
+
+            document.write("<td width=\"200px\" align=\"center\"><a href=\"#top\">Back to top</a></td>");
+
+            if (codesAFTER)
+                document.write("<td width=\"100px\" align=\"right\"><a href=\"code.html"+everythingButS+"s="+(s+1)+"\">Next</a></td>");
+            else
+                document.write("<td width=\"100px\"></td>");
+            document.write("</tr></table></li>");
+        }
+    }
+};
+
+if ( everythingButS == "?" )
+{
+    // if there're no other URL parameters besides s, then don't filter for anything
+    writebyfilter( true );
+}
+else
+{
+    var filter={};
+    if ( QueryString['ys'] !== undefined )
+    {   
+        var yy = QueryString['ys'];
+        var year = parseInt(yy.substr(0,4)); 
+        var modifier = yy.substr(4);
+        if ( modifier  == "+" )
+            filter['yearstart'] = {gte:year}; // get all years after this year, too
+        else if ( modifier == "-" )
+            filter['yearstart'] = {lte:year}; // get all years before this year, too
+        else
+            filter['yearstart'] = {is:year};
+    }
+    if ( QueryString['ye'] !== undefined )
+    {   
+        var yy = QueryString['ye'];
+        var year = parseInt(yy.substr(0,4)); 
+        var modifier = yy.substr(4);
+        if ( modifier  == "+" )
+            filter['yearend'] = {gte:year}; // get all years after this year, too
+        else if ( modifier == "-" )
+            filter['yearend'] = {lte:year}; // get all years before this year, too
+        else
+            filter['yearend'] = {is:year};
+    }
+    if ( QueryString['t'] !== undefined )
+        filter['title'] = {likenocase:QueryString['t']};
+    if ( QueryString['g'] !== undefined )
+        filter['tags'] = {likenocase:QueryString['g']};
+    if ( QueryString['d'] !== undefined )
+        filter['description'] = {likenocase:QueryString['d']};
+    writebyfilter( filter );
+}
+
+
+</script>
 
 
 </ul>
-
 
 
 </div>
