--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 </li>
 
 <li>
+<a href="#update">Update</a>
+</li>
+
+<li>
 <a href="#contact">Contact</a>
 </li>
 
@@ -74,6 +78,21 @@ and chemistry, and I enjoy coding on the side.
 </table>
 </li>
 
+<a id="update"></a>
+<li>
+<table>
+<tr>
+<td class=mainentrytitle>
+Last update
+</td>
+<td class=mainentrydate>2014-09-17</td>
+</tr>
+</table>
+<p>Now the 
+<a href="code.html">coding</a> page runs on javascript for sorting; 
+also added <a href="code.html?t=Sparrow-bullets">sparrow-bullets</a>
+to the projects list.</p>
+</li>
 
 <a id="contact"></a>
 <li>
