Minor changes -- switching update to news, removing latest update script

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 </li>
 
 <li>
-<a href="#update">Update</a>
+<a href="#contact">Contact</a>
 </li>
 
 <li>
-<a href="#contact">Contact</a>
+<a href="#news">News</a>
 </li>
 
 </ul>
@@ -78,22 +78,6 @@ and chemistry, and I enjoy coding on the side.
 </table>
 </li>
 
-<a id="update"></a>
-<li>
-<table>
-<tr>
-<td class=mainentrytitle>
-Last update
-</td>
-<td class=mainentrydate>2014-09-17</td>
-</tr>
-</table>
-<p>Now the 
-<a href="code.html">coding</a> page runs on javascript for sorting; 
-also added <a href="code.html?t=Sparrow-bullets">sparrow-bullets</a>
-to the projects list.</p>
-</li>
-
 <a id="contact"></a>
 <li>
 <table>
@@ -117,7 +101,7 @@ De Boelelaan 1083<br>
 </li>
 
 
-
+<!--
 <center>
 <p><i> Last updated:
 <script>
@@ -128,8 +112,27 @@ today = today.replace(/-/g, " ");
 today = new Date(Date.parse(today));
 document.write(today.getFullYear()+"-"+(today.getMonth()+1)+"-"+today.getDate());
 </script>
-</i> </p><!-- last update -->
+</i> </p>
 </center>
+-->
+
+
+<a id="news"></a>
+<li>
+<table>
+<tr>
+<td class=mainentrytitle>
+Latest update
+</td>
+<td class=mainentrydate>2014-09-17</td>
+</tr>
+</table>
+<p>Now the 
+<a href="code.html">coding</a> page runs on javascript for sorting; 
+also added <a href="code.html?t=Sparrow-bullets">sparrow-bullets</a>
+to the projects list.</p>
+</li>
+
 
 </ul>
 
