changed on the side to as a hobby

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ document.getElementById("demo").innerHTML=x;
 <td>
 <p class=withstyle> My name is Lucas Wagner.</p>
 <p class=withstyle>For a living, I do research in theoretical physics
-and chemistry, and I enjoy coding on the side.
+and chemistry, and I enjoy coding as a hobby.
 </p>
 
 </td>
