--- a/teach.html
+++ b/teach.html
@@ -72,7 +72,7 @@ is the website I made for students to work through the labs.
 I also led many other discussions and labs, somehow without
 websites.  This includes introductory physics (both discussions and labs) 
 at Concordia (2007-2008) and UC Irvine (2008-2009).
-See <a href="LucasWagner-CV.pdf" target="lowcv">my CV</a> for a few others.
+See <a href="LucasWagner-CV.pdf" target="CV">my CV</a> for a few others.
 </p>
 </li>
 
@@ -100,8 +100,8 @@ See <a href="LucasWagner-CV.pdf" target="lowcv">my CV</a> for a few others.
 <ul>
 
 <li>
-<a href="index.html" title="go back home">
-Home
+<a href="index.html" title="news">
+Updates
 </a>
 </li>
 
@@ -123,7 +123,7 @@ About
 
 <br>
 
-<li><a href="LucasWagner-CV.pdf" target="lowcv" title="My curriculum vitae">
+<li><a href="LucasWagner-CV.pdf" target="CV" title="My curriculum vitae">
 My CV
 </a></li>
 
